Fix Some overflow bug and api data change

--- a/學習記錄/css/downloadModal.scss
+++ b/學習記錄/css/downloadModal.scss
@@ -3,7 +3,6 @@
 }
 
 .ModalBoxDetailText {
-  //   width: 80vw;
   display: grid;
   grid-template-columns: 1fr;
   grid-gap: 20px;
@@ -50,17 +49,50 @@
   & .filterBox-checkBox-selectAll {
     padding: 10px 20px;
     border-bottom: 1px solid var(--border-color);
+
+    & label {
+      &::before {
+        height: 18px;
+        width: 18px;
+      }
+
+      &::after {
+        height: 16px;
+        width: 16px;
+        left: 2px;
+        font-size: 5px;
+        text-align: center;
+      }
+    }
   }
 
   & .filterBox-checkBox-group-list {
     max-height: 45vh;
     overflow-y: auto;
     & .filterBox-checkBox-group {
+      overflow-x: hidden;
       padding: 10px 20px;
 
       & label {
+        display: block;
+        width: 100%;
+        overflow: hidden;
+        word-wrap: break-word;
         white-space: nowrap;
         text-overflow: ellipsis;
+
+        &::before {
+          height: 18px;
+          width: 18px;
+        }
+
+        &::after {
+          height: 16px;
+          width: 16px;
+          left: 2px;
+          font-size: 5px;
+          text-align: center;
+        }
       }
     }
   }
